apps/transportation/base/deployconfig.yaml

apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-transport-simulator.git
  labels:
    app: vaccinetransport
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: vaccine-transport-simulator
    app.kubernetes.io/version: 1.0.0
  name: vaccine-transport-simulator
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: vaccine-transport-simulator
    app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      annotations:
        app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-transport-simulator.git
      labels:
        app: vaccinetransport
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: vaccine-transport-simulator
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - args:
        - -jar
        - /deployments/quarkus-run.jar
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        command:
        - java
        image: quay.io/ibmcase/vaccine-transportation
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: vaccine-transport-simulator
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /deployments/certs/server
          name: kafka-cert
          readOnly: false
          subPath: ""
      serviceAccount: vaccine-runtime
      volumes:
      - name: kafka-cert
        secret:
          optional: false
          secretName: kafka-cluster-ca-cert
