apps/transportation/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-transport-simulator.git
  labels:
    app.kubernetes.io/name: vaccine-transport-simulator
    app.kubernetes.io/version: 1.0.0
    app: vaccinetransport
    app.openshift.io/runtime: quarkus
  name: vaccine-transport-simulator
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: vaccine-transport-simulator
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
